--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ joblib==1.5.1
 Mako==1.3.10
 MarkupSafe==3.0.2
 mpmath==1.3.0
-numpy==1.26.4
+numpy>=1.26.0
 onnxruntime==1.16.3
 opencv-python==4.8.1.78
 packaging==25.0
@@ -50,8 +50,8 @@ python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 rsa==4.9.1
-scikit-learn==1.3.2
-scipy==1.15.3
+scikit-learn>=1.3.0
+scipy>=1.11.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.23
