--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,4 @@
-aiofiles==23.2.1
-alembic==1.12.1
-annotated-types==0.7.0
-anyio==4.9.0
-bcrypt==4.3.0
-certifi==2025.7.14
-cffi==1.17.1
-click==8.1.7
-colorama==0.4.6
-coloredlogs==15.0.1
-cryptography==45.0.5
-dnspython==2.7.0
-ecdsa==0.19.1
-email_validator==2.2.0
-exceptiongroup==1.3.0
-fastapi==0.116.1
-flatbuffers==25.2.10
-greenlet==3.2.3
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.25.2
-humanfriendly==10.0
-idna==3.10
-joblib==1.5.1
-Mako==1.3.10
-MarkupSafe==3.0.2
-mpmath==1.3.0
-numpy>=1.26.0
-onnxruntime>=1.20.0
-opencv-python>=4.9.0
-packaging==25.0
-pandas>=2.2.0
-passlib==1.7.4
-Pillow>=10.2.0
-prometheus-client==0.19.0
-protobuf==6.31.1
-psutil==7.0.0
-psycopg2-binary>=2.9.9
-pyasn1==0.6.1
-pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.1.0
-pydantic_core==2.33.2
-pyreadline3==3.5.4
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-python-jose==3.5.0
-python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-rsa==4.9.1
-scikit-learn>=1.3.0
-scipy>=1.11.0
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.23
-starlette==0.47.2
-structlog==23.2.0
-sympy==1.14.0
-threadpoolctl==3.6.0
-typer==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-tzdata==2025.2
-uvicorn==0.35.0
-watchfiles==1.1.0
-websockets==15.0.1
+opencv-python>=4.8.0
+numpy>=1.24.0
+onnxruntime>=1.16.0
+scikit-image>=0.21.0
