--- a/desktop/package.json
+++ b/desktop/package.json
@@ -24,13 +24,16 @@
     "opencv4nodejs": "^5.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sql.js": "^1.13.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
+    "@electron/rebuild": "^4.0.1",
     "@eslint/js": "^9.30.1",
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/sql.js": "^1.4.9",
     "@vitejs/plugin-react": "^4.6.0",
     "cross-env": "^10.0.0",
     "electron": "^37.2.5",
@@ -40,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "npm-run-all": "^4.1.5",
+    "terser": "^5.44.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
