--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,35 @@ desktop/dist-react/
 # Backend
 backend/dist/
 backend/build/
+backend/*.exe
+backend/*.pkg
+backend/*.spec.bak
+
+# PyInstaller artifacts
+*.toc
+*.pyz
+*.zip
+*.pkg
+*.pyc
+__pycache__/
+*.pyo
+*.pyd
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # IDE
 .vscode/
