Add missing deps

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -27,3 +27,6 @@ pyinstaller
 
 # Windows-specific dependencies for PyInstaller builds
 pywin32-ctypes
+
+# Multipart dependencies
+python-multipart
