Remove unused imports and add more lint path

--- a/desktop/tsconfig.app.json
+++ b/desktop/tsconfig.app.json
@@ -24,5 +24,11 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "src/types/**/*"]
+  "include": ["src", 
+              "src/types/**/*", 
+              "src/components/**/*", 
+              "src/services/**/*",
+              "electron/**/*"
+            
+            ]
 }
