Remove line space

--- a/desktop/tsconfig.app.json
+++ b/desktop/tsconfig.app.json
@@ -28,7 +28,6 @@
               "src/types/**/*", 
               "src/components/**/*", 
               "src/services/**/*",
-              "electron/**/*"
-            
+              "src/electron/**/*"
             ]
 }
