--- a/desktop/package.json
+++ b/desktop/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@types/node": "^24.3.1",
+    "electron-store": "^11.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.12",
