--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@types/node": "^24.3.1",
     "electron-store": "^11.0.2",
+    "framer-motion": "^12.29.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.12",
